--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,50 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BrewFinder</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="styles/main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BrewFinder</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 
 <body>
-    <div class="container" >
-        <div class="row">
-            <div class="d-flex justify-content-center align-items-end logo pb-0 mb-0 lo">
-                <h1><img src="images/BrewFinder.png" alt="BrewFinder Logo" height="300px"></h1>
-            </div>
-        </div>
-            
-                <% if (locals.name){ %>
-                    <div class="row py-3 card">
-                    <h1 class="text-center card-title"><%= name %></h1>
-                <% }%>
-            
-                <% if (locals.address_1 !== null){ %>
-                    <p class="text-center card-subtitle"><%= locals.address_1 %> <%= locals.city%></p>
-                </div>
-                <% } else { %>
-                    <p class="text-center card-subtitle">No Adress found, might have to search again</p>
-                </div>
-                <% } %>
-            </div>
-        
+  <div class="container">
+    <div class="row">
+      <div class="d-flex justify-content-center align-items-end logo pb-0 mb-0 lo">
+        <h1><img src="images/BrewFinder.png" alt="BrewFinder Logo" height="300px"></h1>
+      </div>
+    </div>
 
-        <form action="/" method="POST" class="row align-items-center justify-content-center gx-2 py-3">
-            <div class="col-sm-auto">
-                <input type="text" name="city" placeholder="City" class="form-control">
-            </div>
-            <div class="col-sm-auto">
-                <input type="text" name="state" placeholder="State" class="form-control">
-            </div>
-            <div class="col-sm-auto">
-                <input type="submit" value="Look Up" class="form-control btn btn-info">
-            </div>
-        
-        </form> 
+    <% if (locals.name){ %>
+      <div class="row py-3 card">
+        <h1 class="text-center card-title">
+          <%= name %>
+        </h1>
+    <% } %>
+
+          <% if (locals.address_1 !==null){ %>
+            <p class="text-center card-subtitle">
+              <%= locals.address_1 %>
+              <%= locals.city%>
+            </p>
+          </div>
+      <% } else { %>
+        <p class="text-center card-subtitle">No Adress found, might have to search again</p>
+  </div>
+  <% } %>
+
+
+    <form action="/" method="POST" class="row align-items-center justify-content-center gx-2 py-3">
+      <div class="col-sm-auto">
+        <input type="text" name="city" placeholder="City" class="form-control">
+      </div>
+      <div class="col-sm-auto">
+        <input type="text" name="state" placeholder="State" class="form-control">
+      </div>
+      <div class="col-sm-auto">
+        <input type="submit" value="Look Up" class="form-control btn btn-info">
+      </div>
+    </form>
 
     </div>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+
 </html>
